# IP_address_checker

./: .gitignore  README.md  pyproject.toml
ip_checker/: check_ip.log.txt  check_ip.py  find_ip.log.txt  find_ip.py  languages.py  main.py  template  tp.glade~
tests/: test_-_class_find_ip_-_.py  test_check_ip.py
