[tool.poetry]
name = "ip-checker"
version = "0.1.0"
description = ""
authors = ["Gurov Mikhail <mikhail@gurov.sk>"]
readme = "README.md"
packages = [{include = "ip_checker"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pygobject = "^3.42.2"
requests = "^2.28.2"
bs4 = "^0.0.1"
loguru = "^0.6.0"
pyinstaller = "^5.7.0"
pytz = "^2022.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
